--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@types/node": "^16.11.10"
+    "@types/node": "^16.11.10",
+    "graphology": "^0.25.1",
+    "graphology-traversal": "^0.3.1",
+    "graphology-types": "^0.24.5"
   }
 }
